--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2
 jobs:
-  main@python2:
+  main:
     docker:
-      - image: circleci/python:2
+      - image: circleci/python:3
 
     steps:
       - checkout
@@ -14,7 +14,7 @@ jobs:
             mkdir -p venv
             virtualenv venv
             . venv/bin/activate
-            set -o pipefail; pip install --upgrade -r requirements_dev_py2.txt | cat
+            set -o pipefail; pip install --upgrade -r requirements_dev.txt | cat
 
       - run:
           name: Show versions
@@ -29,7 +29,7 @@ jobs:
             . venv/bin/activate
             ./dev.py coverage
 
-  main@python3:
+  lint:
     docker:
       - image: circleci/python:3
 
@@ -42,21 +42,13 @@ jobs:
             mkdir -p venv
             virtualenv venv
             . venv/bin/activate
-            set -o pipefail; pip install --upgrade -r requirements_dev_py3.txt | cat
+            set -o pipefail; pip install --upgrade -r requirements_dev.txt | cat
 
       - run:
           name: Show versions
           command: |
             . venv/bin/activate
             pip freeze
-
-      - run:
-          name: Run tests
-          when: always
-          command: |
-            . venv/bin/activate
-            ./dev.py coverage
-
       - run:
           name: Check lint
           when: always
@@ -77,7 +69,7 @@ jobs:
             mkdir -p venv
             virtualenv venv
             . venv/bin/activate
-            set -o pipefail; pip install --upgrade -r requirements_dev_py3.txt | cat
+            set -o pipefail; pip install --upgrade -r requirements_dev.txt | cat
 
       - run:
           name: Show versions
@@ -97,8 +89,8 @@ workflows:
 
   on-commit:
     jobs:
-      - main@python2
-      - main@python3
+      - main
+      - lint
       - format
 
   daily:
@@ -109,6 +101,6 @@ workflows:
             branches:
               only: master
     jobs:
-      - main@python2
-      - main@python3
+      - main
+      - lint
       - format
